compose_pills: Fix long text overflow in DM recipient box.
Removes the fixed height of the input field in compose
DM recipient box. This commit makes the behaviour of recipient
compose box equal to input pills used else where.

Fixes: #27688.

--- a/web/styles/input_pill.css
+++ b/web/styles/input_pill.css
@@ -126,13 +126,9 @@
     border: 1px solid hsl(0deg 0% 0% / 20%);
     background-color: hsl(0deg 0% 100%);
 
-    .input {
-        height: 20px;
-
-        &:first-child:empty::before {
-            content: attr(data-no-recipients-text);
-            opacity: 0.5;
-        }
+    .input:first-child:empty::before {
+        content: attr(data-no-recipients-text);
+        opacity: 0.5;
     }
 
     .pill + .input:empty::before {
